Performance and Thermal profiles. Per App and system wide. Device specific. Ask your device maintainer to add support!
Change-Id: I0823f598f2008c27870ec455c1f6e997622323fe

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -479,4 +479,11 @@
     <!-- Device hidden prefs -->
     <string name="show_device_hidden_prefs_title">Do not hide preferences</string>
     <string name="show_device_hidden_prefs_summary">By default, preferences that will probably not work well on your device (because of e.g. root status or display cutout) will not be shown</string>
+
+    <!-- Application Settings -->
+
+    <string name="app_settings_category">Application Settings</string>
+    <string name="app_settings_title">Application Profile</string>
+    <string name="app_settings_summary">Choose per-app settings for Battery, Performance, Thermal, etc...</string>
+
 </resources>
