--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -33,6 +33,7 @@
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
     <string name="network_traffic_state_title">Mostrar actividad de la red en la barra de estado</string>
+    <string name="network_traffic_autohide_threshold_title">Tráfico de red mínimo para ocultar actividad (KB/s)</string>
     <!-- 4G icon -->
     <string name="show_fourg_icon_title">Icono 4G</string>
     <string name="show_fourg_icon_summary">Mostrar icono de 4G en lugar de LTE</string>
@@ -267,6 +268,7 @@
     <string name="hidden_anim_more_nice">AGRADABLE</string>
     <!-- Sensor block per-package -->
     <string name="sensor_block_title">Bloqueo de sensor por paquete</string>
+    <string name="sensor_block_summary">Bloquear el acceso a ciertos sensores de algunas aplicaciones para ahorrar batería.</string>
     <!-- Weather - OmniJaws Settings -->
     <string name="weather_title">Clima</string>
     <string name="weather_config_title">Ajustes del servicio</string>
@@ -274,6 +276,7 @@
     <!-- Statusbar ticker -->
     <string name="ticker_animation_mode_title">Animación del Ticker</string>
     <string name="ticker_animation_mode_alpha_fade">Desvanecer</string>
+    <string name="ticker_tick_duration_title">Duración de ticker</string>
     <!-- Navigation-->
     <string name="navigation_title">Navegación</string>
     <string name="navigation_summary">Predeterminado/Smartbar/Fling/Gestos</string>
@@ -390,4 +393,6 @@
     <string name="show_device_hidden_prefs_title">No ocultar preferencias</string>
     <string name="show_device_hidden_prefs_summary">Por defecto, las preferencias que no funcionen bien en tu dispositivo no serán mostradas</string>
     <!-- Application Settings -->
+    <string name="app_settings_category">Configuración de Aplicaciones</string>
+    <string name="app_settings_title">Perfiles de Aplicaciones</string>
 </resources>
