--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -253,8 +253,12 @@
     <string name="no_root_title">Urządzenie niezrootowane</string>
     <string name="no_root_summary">Aby uzyskać więcej funkcji, zrootuj swoje urządzenie</string>
     <!-- Other / general purpose -->
+    <string name="ok">@android:string/ok</string>
+    <string name="cancel">@android:string/cancel</string>
     <string name="on">Wł</string>
     <string name="off">Wył</string>
+    <string name="yes">@android:string/yes</string>
+    <string name="no">@android:string/no</string>
     <string name="reset">Wyczyść</string>
     <string name="systemui_restart_title">Wymagany restart SystemUI</string>
     <string name="systemui_restart_message">Aby wszystkie zmiany zostały wprowadzone wymagany jest restart SystemUI. Zrestartować SystemUI teraz?</string>
